fix: change the white-space wrapping

--- a/src/components/shared/TextItem/TextItem.module.scss
+++ b/src/components/shared/TextItem/TextItem.module.scss
@@ -15,4 +15,5 @@
 
 .itemText {
   font-family: "Cabin", sans-serif;
+  white-space: pre-wrap;
 }
