--- a/src/components/shared/TextList/TextList.module.scss
+++ b/src/components/shared/TextList/TextList.module.scss
@@ -8,6 +8,7 @@
   font-family: "Cabin", sans-serif;
 
   li {
+    white-space: pre-wrap;
     margin: 1rem 0;
   }
 
